# utf8-utf16-converter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
converter/: CMakeLists.txt
converter/include/: converter.h
converter/src/: converter.c
samples/: .editorconfig  chinese.utf8.txt  lorem_ipsum.utf16.txt  lorem_ipsum.utf8.txt
test/: CMakeLists.txt
test/src/: test.c
tester/: CMakeLists.txt  README.md
tester/src/: test.c
tester/test-cases/: .editorconfig  .gitattributes  README.md
tester/test-cases/two-way/: all.utf16.txt  chinese.utf16.txt  chinese.utf8.txt  emoji.utf16.txt  emoji.utf8.txt  lorem_ipsum.utf16.txt  lorem_ipsum.utf8.txt
tester/test-cases/utf16-to-utf8/: unmatched_high.utf16.txt  unmatched_low.utf16.txt
tester/test-cases/utf8-to-utf16/: overlong.utf8.txt  surrogate.utf8.txt  truncated.utf8.txt
